[package]
name = "phi"
version = "0.0.0-WIP"
authors = ["Jan Segre <jan@segre.in>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/jansegre/phi"
homepage = "http://jansegre.com/phi"
documentation = "http://jansegre.com/phi/phi"
description = """
*Reserved crate name, WIP.*
Light-weight physisics simulation library.
"""

[features]
unstable = []
